import 'package:client/models/user.dart';

class Administrator extends User {

}
