export interface Service {
  role?: string,
  name?: string,
  price?: number,
}
