```plantuml
@startuml
skinparam backgroundColor HotPink

    abstract class User{
        -firstName
        -lastName
        -userName
        -password
        -role
    }

    class Administrator extends User{

    }

    class ServiceProvider extends User{

    }
    class Client extends User{

    }
    class Rating {
      -score
      -comment
    }

    class Service{
      -role
      -price
      -name
    }

    class ProviderProfile{
      -company
      -address
      -phoneNumber
      -description
      -isLicensed
    }

    class Availability {
      -monday
      -tuesday
      -wednesday
      -thursday
      -friday
      -saturday
      -sunday
    }

    class Date {
      -day
      -month
      -year
    }

    class Appointment {
      -time
    }


    Client "1" -- "*" Appointment: > has a
    Service "1" -- "*" Appointment: > has a
    ServiceProvider "1" -- "1" ProviderProfile: > has a
    ServiceProvider "1" -- "*" Rating: > has a
    ServiceProvider "1" -- "*" Date: > has a
    Date "1" -- "*" Appointment: > has a
    ProviderProfile "1" -- "*" Service: > provides a
    Availability "1" -- "1" ProviderProfile: > has a
@enduml
```
